Resolving first dependencies from OJO

--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,19 @@ version = '0.0.1'
 
 mainClassName = 'com.jdydev.ew.client.EWClient'
 
-repositories { jcenter() }
+repositories { 
+    jcenter() 
+    maven {
+        url "http://oss.jfrog.org/artifactory/simple/libs-snapshot/"
+    }
+}
 
 task wrapper(type: Wrapper) { gradleVersion = '1.12' }
 
 dependencies {
     compile fileTree(dir: "${System.getProperty('user.home')}/git/jmonkeyengine", include: '*/build/libs/*.jar')
-    // Need to come up with a solution to the natives. 
-    compile fileTree(dir: "${System.env.APPDATA}/.jmonkeyplatform/3.0/libs", include: 'jME3-lwjgl-natives.jar')
-    compile fileTree(dir: "${System.env.APPDATA}/.jmonkeyplatform/3.0/libs", include: 'jme3-bullet-*-SNAPSHOT-natives.jar')
     compile 'org.lwjgl.lwjgl:lwjgl:2.9.1'
     compile 'de.jarnbjo:j-ogg-all:1.0.0'
+    runtime 'com.jdydev.jme3:jme3-bullet:3.1.0-SNAPSHOT:natives'
+    runtime 'com.jdydev.jme3:jme3-lwjgl:3.1.0-SNAPSHOT:natives'
 }
