--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,22 @@ repositories {
     }
 }
 
+ext {
+  jme3Version = '3.1.0-SNAPSHOT'
+}
+
 task wrapper(type: Wrapper) { gradleVersion = '1.12' }
 
 dependencies {
-    compile fileTree(dir: "${System.getProperty('user.home')}/git/jmonkeyengine", include: '*/build/libs/*.jar')
+    compile "com.jdydev.jme3:jme3-core:${jme3Version}"
+    compile "com.jdydev.jme3:jme3-bullet:${jme3Version}"
+    compile "com.jdydev.jme3:jme3-terrain:${jme3Version}"
     compile 'org.lwjgl.lwjgl:lwjgl:2.9.1'
     compile 'de.jarnbjo:j-ogg-all:1.0.0'
-    runtime 'com.jdydev.jme3:jme3-bullet:3.1.0-SNAPSHOT:natives'
-    runtime 'com.jdydev.jme3:jme3-lwjgl:3.1.0-SNAPSHOT:natives'
+    runtime "com.jdydev.jme3:jme3-bullet-natives:${jme3Version}"
+    runtime "com.jdydev.jme3:jme3-lwjgl-natives:${jme3Version}"
+    runtime "com.jdydev.jme3:jme3-lwjgl:${jme3Version}"
+    runtime "com.jdydev.jme3:jme3-desktop:${jme3Version}"
+    runtime "com.jdydev.jme3:jme3-plugins:${jme3Version}"
+    runtime "com.jdydev.jme3:jme3-testdata:${jme3Version}"
 }
