--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:1.1.2'
     
     compile 'org.codehaus.groovy:groovy-all:2.3.3'
+    compile 'org.codehaus.groovyfx:groovyfx:0.4.0'
+    testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
 }
 
 task runServer(type: JavaExec) {
